--- a/resources/css/index.css
+++ b/resources/css/index.css
@@ -1,6 +1,9 @@
+@import "tailwindcss";
 @import "../../node_modules/leaflet/dist/leaflet.css";
 @import "../../node_modules/leaflet-fullscreen/dist/leaflet.fullscreen.css";
 @import "../../node_modules/@geoman-io/leaflet-geoman-free/dist/leaflet-geoman.css";
+
+@source "../../resources/views/**/*.blade.php";
 
 .map-icon {
     stroke: #dbeafe;
